--- a/app/src/main/res/layout/activity_claw_machine.xml
+++ b/app/src/main/res/layout/activity_claw_machine.xml
@@ -29,7 +29,7 @@
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/quicksand"
                 android:minWidth="0dp"
                 android:text="Back"
                 android:textAllCaps="false"
@@ -79,7 +79,7 @@
                             android:id="@+id/buyTriesText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-medium"
+                            android:fontFamily="@font/quicksand"
                             android:text="+1 Try"
                             android:textColor="@color/white"
                             android:textSize="10sp"
@@ -89,7 +89,7 @@
                             android:id="@+id/buyTriesCost"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-light"
+                            android:fontFamily="@font/quicksand"
                             android:text="50 ✷"
                             android:textColor="@color/white"
                             android:textSize="9sp" />
@@ -98,7 +98,7 @@
                             android:id="@+id/buyTriesRemaining"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-light"
+                            android:fontFamily="@font/quicksand"
                             android:text="10/10"
                             android:textColor="@color/white"
                             android:textSize="8sp" />
@@ -128,7 +128,7 @@
                             android:id="@+id/triesText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-medium"
+                            android:fontFamily="@font/quicksand"
                             android:text="5/5"
                             android:textColor="@color/green"
                             android:textSize="12sp"
@@ -138,7 +138,7 @@
                             android:id="@+id/triesLabel"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-light"
+                            android:fontFamily="@font/quicksand"
                             android:text="Tries"
                             android:textColor="@color/gray"
                             android:textSize="9sp" />
@@ -147,7 +147,7 @@
                             android:id="@+id/timerText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-light"
+                            android:fontFamily="@font/quicksand"
                             android:textColor="@color/tan"
                             android:textSize="8sp"
                             android:visibility="gone"
@@ -181,7 +181,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
-                    android:fontFamily="sans-serif-medium"
+                    android:fontFamily="@font/quicksand"
                     android:maxLines="1"
                     android:text="Claws for Paws"
                     android:textColor="@color/green"
@@ -312,7 +312,7 @@
         android:layout_marginBottom="12dp"
         android:background="@drawable/bamboo_button_green"
         app:backgroundTint="@null"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/quicksand"
         android:text="HOLD TO MOVE • RELEASE TO GRAB"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -349,7 +349,7 @@
                 android:id="@+id/bubbleText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/quicksand"
                 android:gravity="center_vertical"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
