--- a/app/src/main/res/layout/dialog_mood_selection.xml
+++ b/app/src/main/res/layout/dialog_mood_selection.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="12dp"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/quicksand"
         android:text="How are you feeling?"
         android:textAlignment="center"
         android:textColor="@color/green"
